--- a/SpringMVC_Study_1/src/main/webapp/WEB-INF/web.xml
+++ b/SpringMVC_Study_1/src/main/webapp/WEB-INF/web.xml
@@ -29,5 +29,13 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+	
+	<error-page>
+		<error-code>500</error-code>
+		<location>/error500.jsp</location>
+	</error-page>
+	<!-- <error-page>
+		<error-code>400</error-code>
+		<location>/error400.jsp</location>
+	</error-page> -->
 </web-app>
